--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CVApp</string>
+    <string name="navigation_bottom_bar_summary">Summary</string>
+    <string name="navigation_bottom_bar_technical_knowledge">Topics of knowledge</string>
+    <string name="navigation_bottom_bar_experience">Experience</string>
 </resources>
