--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="navigation_bottom_bar_summary">Summary</string>
     <string name="navigation_bottom_bar_knowledge">Topics of knowledge</string>
     <string name="navigation_bottom_bar_experience">Experience</string>
+    <string name="error">Error</string>
+    <string name="ok">OK</string>
 </resources>
